--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 	<!-- js -->
 	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="/assets/lib/js/menu.js"></script>
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
 	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
@@ -72,9 +73,13 @@
 
 			<div class="nav_area">
 				<nav class="nav">
-					<a href="/sub.html"><i>UI/UX Assets</i></a>
+					<a href="/page.html?html=htmlStart"><i>UI/UX Assets</i></a>
+					<a href="/page.html?html=blockInline"><i>Project GUIDE</i></a>
+					<a href="/page.html?html=sections"><i>Web Trends</i></a>
+					<!--
 					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
 					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
+					-->
 				</nav>
 
 				<aside class="aside">
