- ajax 기본 동작 완성(km)

--- a/assets/html/02-blockInline/blockInline.html
+++ b/assets/html/02-blockInline/blockInline.html
@@ -1,1 +1,107 @@
-02-blockInline
+<h1>02-blockInline</h1>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
+<p>blockInline</p>
+<p>11111111111</p>
