--- a/main.html
+++ b/main.html
@@ -102,12 +102,12 @@
 	<article class="main_created inner">
 		<h2><span>C</span>reated by</h2>
 		<ul class="created">
-			<li class="dae_min">
+			<li class="dae_min hover">
 				<div class="box">
 					<strong>DAE-MIN, KIM</strong>
 					<div>
 						<b>김대민</b>
-						<p>html, css, jquery, ncs, accessibility</p>
+						<p>html, css, javascript, ncs, accessibility</p>
 					</div>
 				</div>
 			</li>
@@ -125,7 +125,7 @@
 					<strong>KWANG-NAM, YANG</strong>
 					<div>
 						<b>양광남</b>
-						<p>html, css, javascript,  jquery, accessibility</p>
+						<p>html, css, javascript, jquery, accessibility</p>
 					</div>
 				</div>
 			</li>
