- assets 링크 작업 중

--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
 			<div class="hd_nav_area">
 				<nav class="nav">
 					<h2 class="sound_only">상단 메뉴</h2>
-					<a class="uk_link" href="?data=Assets&HTML&htmlStart"><i>UI/UX Assets</i></a>
-					<a class="uk_link" href="?data=Assets&HTML&blockInline"><i>Project GUIDE</i></a>
-					<a class="uk_link" href="?data=Assets&HTML&sections"><i>Web Trends</i></a>
 				</nav>
 
 				<section class="aside">
@@ -104,24 +101,13 @@
 	</header>
 	<!-- //uk-header -->
 
-	<div class="zoom_wrap">
 	<section id="content" class="uk_container"></section>
 	<!-- //uk-main -->
 
 	<footer class="uk_footer">
 		<nav class="nav inner">
-			<div class="depth1">
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>UI/UX Assets</i></a>
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
-			</div>
-			<div class="depth2">
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>HTML</i></a>
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>CSS</i></a>
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>JAVASCRIPT</i></a>
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>ACCESSIBILITY</i></a>
-				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>NCS</i></a>
-			</div>
+			<div class="depth1"></div>
+			<div class="depth2"></div>
 		</nav>
 		<div class="btm">
 			<h1 class="uk_logo"><a href="/" class="uk_link">uxkm</a></h1>
@@ -129,7 +115,9 @@
 		</div>
 	</footer>
 	<!-- //uk-footer -->
-	</div>
+
+
+	<div class="zoom_wrap"></div><!-- 사용한다면 uk_container/uk_footer를 감쌀것-->
 
 </div><!-- //wrap -->
 <div class="loading"><i>페이지 로딩 중</i></div>
