--- a/main.html
+++ b/main.html
@@ -9,11 +9,13 @@
 			<!--<p>Created by. Dae-min, Kim & Kwang-nam, Yang & Kyo-sung, Chu </p>-->
 			<p>Created by. Dae-min, Kwang-nam, Kyo-sung </p>
 			<div class="banner">
-				<a href="#" class="bn1">HTML</a>
-				<a href="#" class="bn2">CSS</a>
-				<a href="#" class="bn3">JS</a>
-				<a href="#" class="bn4">ACCESSIBILITY</a>
-				<a href="#" class="bn5">NCS</a>
+				<!--
+				<a href="?data=Assets&HTML&htmlStart" class="uk_link bn1">HTML</a>
+				<a href="?data=Assets&CSS&css" class="uk_link bn2">CSS</a>
+				<a href="#" class="uk_ready bn3">JS</a>
+				<a href="#" class="uk_ready bn4">ACCESSIBILITY</a>
+				<a href="#" class="uk_ready bn5">NCS</a>
+				-->
 			</div>
 		</div>
 		<a href="#" class="next_content"><i>다음 화면</i></a>
@@ -102,7 +104,7 @@
 	<article class="main_created inner">
 		<h2><span>C</span>reated by</h2>
 		<ul class="created">
-			<li class="dae_min hover">
+			<li class="dae_min ho ver">
 				<div class="box">
 					<strong>DAE-MIN, KIM</strong>
 					<div>
