- 서브페이지 기본 구조 작성 중

--- a/assets/01-html/01-htmlStart/htmlStart.html
+++ b/assets/01-html/01-htmlStart/htmlStart.html
@@ -1,16 +1,15 @@
-<h1>01-htmlStart sss</h1>
 
-<div id="html_start" style="height:1000px; background:red;">
-	<h2>HTML이란?</h2>
-	<p>text text</p>
-</div>
+	<article id="html_start" class="curriculum_box" style="height:1000px; background:#eee;">
+		<h2>HTML이란?</h2>
+		<p>text text</p>
+	</article>
 
-<div id="html_basic" style="height:1000px; background:#fff;">
-	<h2>HTML 기본구조</h2>
-	<p>text text</p>
-</div>
+	<article id="html_basic" class="curriculum_box" style="height:1000px; background:#fff;">
+		<h2>HTML 기본구조</h2>
+		<p>text text</p>
+	</article>
 
-<div id="html_element" style="height:1000px; background:red;">
-	<h2>HTML 요소</h2>
-	<p>text text</p>
-</div>
+	<article id="html_element" class="curriculum_box" style="height:1000px; background:#eee;">
+		<h2>HTML 요소</h2>
+		<p>text text</p>
+	</article>
