--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<meta name="apple-mobile-web-app-capable" content=" yes">
 	<meta name="robots" content="index,follow">
 	<meta http-equiv="imagetoolbar" content="no">
-	<meta http-equiv="X-UA-Compatible" content="IE=10,chrome=1">
+	<!--<meta http-equiv="X-UA-Compatible" content="IE=10,chrome=1">-->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Cache-Control" content="no-cache">
 
@@ -17,11 +18,11 @@
 
 	<!-- opengraph -->
 	<meta name="title" content="https://uxkm.github.io">
-	<meta name="description" content="html, css, javascript, jQuery 등의 강의를 목적으로 제작">
+	<meta name="description" content="html, css, javascript, accessibility, ncs,  등의 강의를 목적으로 제작">
 	<meta property="og:title" content="UXKM">
 	<meta property="og:url" content="https://uxkm.github.io">
 	<meta property="og:type" content="website">
-	<meta property="og:description" content="html, css, javascript, jQuery 등의 강의를 목적으로 제작">
+	<meta property="og:description" content="html, css, javascript, accessibility, ncs,  등의 강의를 목적으로 제작">
 	<meta property="og:image" content="/assets/lib/img/og_image.png">
 	<meta property="og:image:width" content="1000">
 	<meta property="og:image:height" content="750">
