--- a/assets/01-html/02-blockInline/blockInline.html
+++ b/assets/01-html/02-blockInline/blockInline.html
@@ -1,26 +1,25 @@
-<h1>02-blockInline</h1>
 
-<div id="block_element" style="height:1000px; background:blue;">
+<article id="block_element" style="height:1000px; background:#eee;">
 	<h2>블록 레벨 요소</h2>
 	<p>text text</p>
-</div>
-<div id="div_block" style="height:1000px; background:#fff;">
+</article>
+<article id="div_block" style="height:1000px; background:#fff;">
 	<h2>대표적인 블록 요소 - div</h2>
 	<p>text text</p>
-</div>
-<div id="inline_element" style="height:1000px; background:blue;">
+</article>
+<article id="inline_element" style="height:1000px; background:#eee;">
 	<h2>인라인 요소</h2>
 	<p>text text</p>
-</div>
-<div id="span_inline" style="height:1000px; background:#fff;">
+</article>
+<article id="span_inline" style="height:1000px; background:#fff;">
 	<h2>대표적인 인라인 요소 - span</h2>
 	<p>text text</p>
-</div>
-<div id="element_nesting" style="height:1000px; background:blue;">
+</article>
+<article id="element_nesting" style="height:1000px; background:#eee;">
 	<h2>요소 중첩</h2>
 	<p>text text</p>
-</div>
-<div id="only_empty" style="height:1000px; background:#fff;">
+</article>
+<article id="only_empty" style="height:1000px; background:#fff;">
 	<h2>단일 요소 또는 빈 요소</h2>
 	<p>text text</p>
-</div>
+</article>
