--- a/ukncs/uxkm-css.html
+++ b/ukncs/uxkm-css.html
@@ -9778,6 +9778,9 @@ CSS 작성
 								일반적으로 뷰포트 해상도에 따라 CSS 코드를 분기한다.<br>
 								대표적으로 사용하는 규칙은 반응형 레이아웃을 작업할 때 사용되며, 문서를 인쇄할 때 사용되기도 한다.
 								<br><br>
+								미디어 쿼리(Media Query)는 CSS2부터 사용되었으며, 미디어 타입을 개선한 CSS3에서 본격적으로 쓰이기 시작한 웹 기법이다.<br>
+								미디어 쿼리는 반응형 웹의 핵심 기법이며, 화면의 폭이나 높이 등의 정보를 가지고 스타일을 개별적으로 줄 수 있다.
+								<br><br>
 								CSS2에서는 @media 규칙을 통해 서로 다른 매체 유형(media type)을 위한 맞춤식 스타일 시트(style sheet)를 지원합니다.<br>
 								예를 들면, HTML 문서가 스크린에 표현될 때와 프린트할 때 서로 다른 스타일을 적용할 수 있습니다.
 								<br><br>
@@ -9787,30 +9790,197 @@ CSS 작성
 							</p>
 						</blockquote>
 						
-						<h5 id="css3-media-type">CSS3 매체 유형(Media Type)</h5>
+						<h5 id="css3-media-type">미디어 쿼리(Media Query) 유형</h5>
 						<section class="ukgroup">
-
+							<p>CSS3의 매체 유형은 이전 CSS2에서 정의된 것을 그대로 사용하고 있습니다.</p>
+							<dl>
+								<dt>all</dt>
+								<dd>
+									<p>모든 매체에 사용함.</p>
+								</dd>
+								<dt>print</dt>
+								<dd>
+									<p>프린터 기기에 사용함.</p>
+								</dd>
+								<dt>screen</dt>
+								<dd>
+									<p>컴퓨터나 태블릿, 스마트폰 등 스크린(screen)이 있는 매체에 사용함.</p>
+								</dd>
+								<dt>speech</dt>
+								<dd>
+									<p>웹 페이지를 읽어주는 스크린 리더(screen reader)에 사용함.</p>
+								</dd>
+							</dl>
 						</section>
 
 						<h5 id="css3-media-attr">미디어 쿼리(Media Query) 속성</h5>
 						<section class="ukgroup">
-
+							<p>orientation 속성을 제외한 모든 속성의 앞에는 min 또는 max 접두사를 사용할 수 있습니다.</p>
+							<p>@media 속성들을 적절히 활용하면 반응형 웹 사이트를 제작하는데 유용합니다.</p>
+							<dl>
+								<dt>width</dt>
+								<dd>
+									<p>화면의 너비</p>
+								</dd>
+								<dt>height</dt>
+								<dd>
+									<p>화면의 높이</p>
+								</dd>
+								<dt>device-width</dt>
+								<dd>
+									<p>매체 화면의 너비</p>
+								</dd>
+								<dt>device-height</dt>
+								<dd>
+									<p>매체 화면의 높이</p>
+								</dd>
+								<dt>devie-aspect-ratio</dt>
+								<dd>
+									<p>매체 화면의 비율</p>
+								</dd>
+								<dt>orientation</dt>
+								<dd>
+									<p>매체 화면의 방향</p>
+								</dd>
+								<dt>color</dt>
+								<dd>
+									<p>매체의 색상 비트 수</p>
+								</dd>
+								<dt>color-index</dt>
+								<dd>
+									<p>매체에서 표현 가능한 색상의 개수</p>
+								</dd>
+								<dt>monochrome</dt>
+								<dd>
+									<p>흑백 매체에서의 픽셀당 비트 수</p>
+								</dd>
+								<dt>resolution</dt>
+								<dd>
+									<p>매체의 해상도</p>
+								</dd>
+							</dl>
 						</section>
 
-						<h5 id="css3-media-internal">CSS 코드 내부에서 분기하는 방법</h5>
+						<h5 id="css3-media-rule">미디어 쿼리(Media Query) 문법</h5>
 						<section class="ukgroup">
-
-						</section>
-
-						<h5 id="css3-media-externall">CSS 코드 외부에서 분기하는 방법</h5>
-						<section class="ukgroup">
-
+							<p>만약 웹 페이지에 접속하고 있는 기기의 매체 유형과 명시된 매체 유형이 일치하고, 모든 표현식이 참(true)이면, 미디어 쿼리는 참(true)을 반환합니다.</p>
+							<p>이렇게 미디어 쿼리의 반환값이 참이면, 해당 블록 안에 명시된 CSS 스타일 코드가 실행됩니다.</p>
+							<p>여기에 and, only, not 등과 같은 키워드를 사용하여 더욱 복잡한 조건을 명시할 수도 있습니다.</p>
+							<dl>
+								<dt>CSS 코드 내부에서 분기하는 방법</dt>
+								<dd>
+									<p>CSS 코드 내부에서 사용하는 미디어 쿼리의 기본적인 문법 예는 다음과 같다. 일반적으로 권장하고 널리 쓰이는 방식이다.</p>
+									<p>@media only all and (조건문) {실행문}</p>
+									<ul>
+										<li><strong>@media</strong>
+											<p>미디어 쿼리가 시작됨을 선언한다. @media, only, all, and, (조건문) 사이에 포함되어 있는 공백은 필수적이다.</p>
+										</li>
+										<li><strong>only</strong>
+											<p>only 키워드는 미디어 쿼리를 지원하는 사용자 에이전트만 미디어 쿼리 구문을 해석하라는 명령이며 생략 가능하다.</p>
+											<p>생략했을 때 기본 값은 only로 처리 된다. 생략해도 무방하므로 이 키워드는 일반적으로 작성하지 않는다.</p>
+											<p>이 자리에는 not 키워드를 사용할 수 있는데 뒤에 오는 모든 조건을 부정하는 연산을 한다.</p>
+										</li>
+										<li><strong>all</strong>
+											<p>all 키워드는 미디어 쿼리를 해석해야 할 대상 미디어를 선언한 것이다.</p>
+											<p>all 이면 모든 미디어가 이 구문을 해석해야 한다.</p>
+											<p>all 키워드 대신 screen 또는 print와 같은 특정 미디어를 구체적으로 언급할 수도 있다.</p>
+											<p>all 키워드는 생략 가능하고 생략했을 때 기본 값은 all 으로 처리된다.</p>
+											<p>이 밖에도 다양한 미디어 타입(all, aural, braille, embossed, handheld, print, projection, screen, speech, tty, tv)이 있다.</p>
+											<p>all, screen, print를 가장 널리 쓴다.</p>
+										</li>
+										<li><strong>and</strong>
+											<p>and 키워드는 논리적으로 ‘AND’ 연산을 수행하여 앞과 뒤의 조건을 모두 만족해야 한다는 것을 의미한다.</p>
+											<p>조건이 유일하거나 또는 only, all과 같은 선행 키워드가 생략되면 and 키워드는 사용하지 말아야 한다.</p>
+											<p>and 대신 콤마 , 기호를 사용하면 'OR' 연산을 수행한다.</p>
+											<p>'OR' 연산은 나열된 조건 중에서 하나만 참이어도 {실행문}을 해석한다.</p>
+										</li>
+										<li><strong>(조건문)</strong>
+											<p>브라우저는 조건문이 참일때{실행문}을 처리하고 거짓일 때 무시한다.</p>
+											<p>조건문은 두 가지 이상 등장할 수 있다.</p>
+											<p>둘 이상의 조건문은 and 키워드 또는 콤마(,) 기호로 연결해야 한다.</p>
+										</li>
+										<li><strong>{실행문}</strong>
+											<p>일반적인 CSS 코드를 이 괄호 안에 작성한다.</p>
+											<p>브라우저는 (조건문)이 참일때 실행문 안쪽에 있는 CSS 코드를 해석한다.</p>
+										</li>
+									</ul>
+								</dd>
+								<dt>CSS 코드 외부에서 분기하는 방법</dt>
+								<dd>
+									<p>조건문에 따라 별도의 외부 CSS 파일을 참조하여 분기하는 방법이며, 이 방식은 성능 최적화 측면에서 권장하지 않는다.</p>
+									<p>
+										데스크탑 브라우저 사용자가 언제든 조건을 변경(예를 들면 창 크기를 조절해서 해상도를 바꿈)할 수 있기 때문에<br>
+										웹 브라우저는 조건에 관계 없이 A.css 파일과 B.css 파일을 항상 요청한다.<br>
+										HTTP 요청을 불필요하게 두 번 발생시켜 이 페이지를 처음 로딩하는 사용자에게는 성능 저하의 원인이 된다.<br>
+										CSS 파일은 하나로 병합하고 CSS 코드 내부에서 조건 분기하는 방식을 권장한다.
+									</p>
+									<p>
+										&lt;link rel="stylesheet" type="text/css" media="all and (조건A)" href="A.css"&gt;
+										&lt;link rel="stylesheet" type="text/css" media="all and (조건B)" href="B.css"&gt;
+									</p>
+								</dd>
+							</dl>
 						</section>
 
 						<h5 id="css3-media-operator">미디어 쿼리(Media Query) 다양한 조건문의 특성</h5>
 						<section class="ukgroup">
+<pre><code>
+/* 예시 1
+뷰포트의 너비가 480픽셀이거나 그 이하일 경우에는 배경색을 darkorange로 표현해 줍니다.
+하지만 뷰포트의 너비가 그 초과일 경우에는 배경색을 lightblue로 바꿔서 표현해 줍니다.
+*/
+body { background-color: darkorange; }
+@media screen and (min-width: 480px) {
+	body { background-color: lightblue; }
+}
 
+/* 예시 2
+다음 예제를 웹 브라우저에서 실행하면 배경색을 검정색으로, 텍스트의 색상은 흰색으로 표현합니다.
+하지만 웹 페이지를 프린트하게 되면 배경색을 흰색으로, 텍스트의 색상을 검정색으로 바꿔서 프린트합니다.
+*/
+@media screen {
+	body { background-color: black; color: white; }
+}
+@media print {
+	body { background-color: white; color: black; }
+}
+</code></pre>
 						</section>
+
+						<h5 id="css3-rwd">반응형 웹과 적응형 웹</h5>
+						<section class="ukgroup">
+
+<pre><code>
+미디어 쿼리 사용시 가로폭의 경계치를 보통 스크린 경계치(screen breakpoints)라고 부른다. 
+일반적으로 스마트폰, 태블릿, 데스크탑에 대해 최소한의 스크린 경계치를 고려해야 하며, 기기별로 주요 경계치와 세부 경계치를 보여주고 있다. 
+참고로 대표적인 mediaquri.es 에서는 320px(스마트폰), 768px(태블릿), 1024px(넷북), 1600px(데스크탑)로 경계치를 정하고 있다.
+
+유동형 그리드(Fluid Grid)의 경우, 그리드는 화면의 폭을 몇개의 컬럼으로 나누고 상황에 따라 그 중 일부 컬럼들을 묶어서 사용하며, 
+컬럼들의 폭과 다른 컬럼과의 간격도 일정하게 유지되는 것을 의미한다. 
+대표적인 그리드 시스템으로는 960 그리드 시스템이 있으며, 12컬럼 그리드는 도 13과 같다. 
+유동형 그리드는 그리드의 폭을 고정값이 아닌 가로폭에 따라서 크기가 변하는 상대적 단위(% 또는 em)로 설정하는 것을 의미한다. 
+유동형 그리드는 모바일에서는 큰 효과를 볼 수 없기 때문에 미디어 쿼리를 이용하여 화면 크기에 따라서 그리드 시스템을 바꾸는 반응형 유동 그리드가 활용되고 있다.
+
+유동형 이미지(유연한 이미지, Flexible Images)는 도 14에 도시된 바와 같이, 
+화면의 폭보다 큰 이미지를 다운받고 이미지의 스타일을 max-width를 100%, height를 auto로 설정하여, 
+이미지를 화면폭에 맞게 가로/세로 길이를 줄였다 늘였다 하는 것을 의미한다. 
+모바일에서 해상도가 높은 이미지를 단순히 크기만 줄여서 사용하는 것은 자원낭비의 문제점이 있어서 데스크탑과 모바일용 이미지를 선별적으로 사용하기도 한다.
+
+유동형 레이아웃(Liquid Layout)은 도 15에 도시된 바와 같이, 레이아웃 크기를 유동형 그리드와 같이 상대적 단위(% 또는 em)로 지정하여 해상도 크기에 따라 유동적인 변화를 주는 것을 의미한다. 
+반응형 그리드와 같이 미디어 쿼리를 이용하여 일정 크기가 되면 레이아웃 구조를 바꾸어 주는 방법이다. LukeW(루크 로블르스키 - 데스크탑 버전보다 모바일 버전을 먼저 디자인해야 한다는 모바일 우선주의 디자인의 창시자)가 제시한 5가지 레이아웃 패턴은 하기와 같다.
+
+- Mostly Fluid(유동형) : 일반적인 화면에서는 유동형 그리드와 유동형 이미지를 사용하여 레이아웃을 그대로 유지한다. 가장 작은 화면에서는 수직으로 컬럼을 세우는 구조를 가지며, 가장 많이 사용되는 패턴이다.
+- Column Drop(열 드롭) : 화면이 작아짐에 따라 부차적인 컬럼을 아래로 떨어트리는 방법을 쓰는 패턴이다. 대부분의 컬럼폭은 화면 크기가 달라져도 변함이 별도 없다는 특징이 있다.
+- Layout Shifter(레이아웃 시프터) : 다양한 디바이스에 따라 각기 다른 레이아웃을 보여주는 패턴이다. 복잡하고 많은 작업이 필요하지만 혁신적인 디자인을 담을 수 있다는 장점이 있다.
+- Tiny Tweaks(작은 변화): 하나의 컬럼을 사용하는 패턴이다. 변화의 폭이 크지 않다는 특징이 있으며, 주로 글 내용을 중시하는 블로그에서 많이 사용되는 패턴이다.
+- Off Canvas(캔버스 오프): 큰 화면에서는 모든 컬럼들을 보여주고 작은 화면에서는 하나의 메인 컬럼만 보여주며 다른 부가적인 컬럼들을 화면 밖에 숨겨놓는 패턴이다. 숨겨진 컬럼들은 필요할 때만 접근하도록 한다.
+
+데스크탑, 태블릿, 모바일 등을 고려한 반응형 웹을 적용하기 위하여 사전에 컨텐츠별 페이지 레아아웃을 설계한다. 
+하지만 UI 구현 중에 빈번한 컨텐츠 추가, 수정, 삭제 등으로 인하여 컨텐츠별 페이지 레이아웃 변경이 발생된다. 
+이로 인한 컨텐츠별 페이지 레이아웃 재설계는 웹 페이지를 새로 작성 및 제작해야 하는 문제가 발생하게 된다.
+</code></pre>
+						</section>
+
 
 						<dl class="linkdoc">
 							<dt>참조</dt>
