- 서브페이지 기본 구조 작성 중

--- a/assets/01-html/02-blockInline/blockInline.html
+++ b/assets/01-html/02-blockInline/blockInline.html
@@ -1,25 +1,54 @@
 
-<article id="block_element" style="height:1000px; background:#eee;">
-	<h2>블록 레벨 요소</h2>
-	<p>text text</p>
-</article>
-<article id="div_block" style="height:1000px; background:#fff;">
-	<h2>대표적인 블록 요소 - div</h2>
-	<p>text text</p>
-</article>
-<article id="inline_element" style="height:1000px; background:#eee;">
-	<h2>인라인 요소</h2>
-	<p>text text</p>
-</article>
-<article id="span_inline" style="height:1000px; background:#fff;">
-	<h2>대표적인 인라인 요소 - span</h2>
-	<p>text text</p>
-</article>
-<article id="element_nesting" style="height:1000px; background:#eee;">
-	<h2>요소 중첩</h2>
-	<p>text text</p>
-</article>
-<article id="only_empty" style="height:1000px; background:#fff;">
-	<h2>단일 요소 또는 빈 요소</h2>
-	<p>text text</p>
-</article>
+
+	<article class="uk_course_summary">
+		<h2 class="sound_only">요약 설명</h2>
+		HTML에는 두가지 종류의 요소(Element) 가 있습니다. 블록 레벨 요소(Block level element) 와 인라인 요소(Inline element) 입니다.
+		HTML의 모든 요소는 해당 요소가 웹 브라우저에 어떻게 보이는가를 결정짓는 display 속성을 가집니다.
+		대부분의 HTML 요소는 이러한 display 속성값으로 대표적으로 block, inline 두 가지 값 중 하나를 가지게 됩니다.
+		단, table의 기본 속성값은 다르게 이루어집니다.
+		HTML5에서는 콘텐츠모델별 분류하며 HTML5의 각 요소들은 특성에 따라 분류.
+		한 요소가 어떤 분류에도 속하지 않을 수도 있고 여러 분류에 속해있을 수도 있다.
+	</article>
+	<!-- 요약 설명 -->
+
+
+	<article id="block_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>블록 레벨 요소</h2>
+		<p>text text</p>
+	</article>
+	<!-- 블록 레벨 요소 -->
+
+
+	<article id="div_block" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>대표적인 블록 요소 - div</h2>
+		<p>text text</p>
+	</article>
+	<!-- 대표적인 블록 요소 - div -->
+
+
+	<article id="inline_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>인라인 요소</h2>
+		<p>text text</p>
+	</article>
+	<!-- 인라인 요소 -->
+
+
+	<article id="span_inline" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>대표적인 인라인 요소 - span</h2>
+		<p>text text</p>
+	</article>
+	<!-- 대표적인 인라인 요소 - span -->
+
+
+	<article id="element_nesting" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>요소 중첩</h2>
+		<p>text text</p>
+	</article>
+	<!-- 요소 중첩 -->
+
+
+	<article id="only_empty" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>단일 요소 또는 빈 요소</h2>
+		<p>text text</p>
+	</article>
+	<!-- 단일 요소 또는 빈 요소 -->
