--- a/assets/01-html/03-sections/sections.html
+++ b/assets/01-html/03-sections/sections.html
@@ -1,133 +1,56 @@
-<h1>03-sections</h1>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
-<p>sections</p>
-<p>11111111111</p>
+
+	<article id="header_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>header element</h2>
+		<p>text text</p>
+	</article>
+	<!-- header element -->
+
+
+	<article id="heading_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>heading(h1,h2,h3,h4,h5,h6) element</h2>
+		<p>text text</p>
+	</article>
+	<!-- heading(h1,h2,h3,h4,h5,h6) element -->
+
+
+	<article id="section_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>section element</h2>
+		<p>text text</p>
+	</article>
+	<!-- section element -->
+
+
+	<article id="nav_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>nav element</h2>
+		<p>text text</p>
+	</article>
+	<!-- nav element -->
+
+
+	<article id="article_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>article element</h2>
+		<p>text text</p>
+	</article>
+	<!-- article element -->
+
+
+	<article id="footer_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>footer element</h2>
+		<p>text text</p>
+	</article>
+	<!-- footer element -->
+
+
+	<article id="aside_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>aside element</h2>
+		<p>text text</p>
+	</article>
+	<!-- aside element -->
+
+
+	<article id="hgroup_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>hgroup element</h2>
+		<p>text text</p>
+	</article>
+	<!-- hgroup element -->
+
