--- a/assets/01-html/04-grouping/grouping.html
+++ b/assets/01-html/04-grouping/grouping.html
@@ -1,1 +1,90 @@
-grouping
+
+	<article id="main_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>main element</h2>
+		<p>text text</p>
+	</article>
+	<!-- main element -->
+
+
+	<article id="p_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>p element</h2>
+		<p>text text</p>
+	</article>
+	<!-- p element -->
+
+
+	<article id="ol_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>ol element</h2>
+		<p>text text</p>
+	</article>
+	<!-- ol element -->
+
+
+	<article id="ul_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>ul element</h2>
+		<p>text text</p>
+	</article>
+	<!-- ul element -->
+
+
+	<article id="li_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>li element</h2>
+		<p>text text</p>
+	</article>
+	<!-- li element -->
+
+
+	<article id="dl_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>dl element</h2>
+		<p>text text</p>
+	</article>
+	<!-- dl element -->
+
+
+	<article id="dt_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>dt element</h2>
+		<p>text text</p>
+	</article>
+	<!-- dt element -->
+
+
+	<article id="dd_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>dd element</h2>
+		<p>text text</p>
+	</article>
+	<!-- dd element -->
+
+
+	<article id="address_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>address element</h2>
+		<p>text text</p>
+	</article>
+	<!-- address element -->
+
+
+	<article id="figure_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>figure element</h2>
+		<p>text text</p>
+	</article>
+	<!-- figure element -->
+
+
+	<article id="figcaption_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>figcaption element</h2>
+		<p>text text</p>
+	</article>
+	<!-- figcaption element -->
+
+
+	<article id="pre_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>pre element</h2>
+		<p>text text</p>
+	</article>
+	<!-- pre element -->
+
+
+	<article id="blockquote_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>blockquote element</h2>
+		<p>text text</p>
+	</article>
+	<!-- blockquote element -->
