--- a/assets/01-html/09-forms/forms.html
+++ b/assets/01-html/09-forms/forms.html
@@ -1,1 +1,98 @@
-forms
+
+	<article id="form_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>form element</h2>
+		<p>text text</p>
+	</article>
+	<!-- form element -->
+
+
+	<article id="label_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>label element</h2>
+		<p>text text</p>
+	</article>
+	<!-- label element -->
+
+
+	<article id="input_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>input element</h2>
+		<p>text text</p>
+	</article>
+	<!-- input element -->
+
+
+	<article id="button_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>button element</h2>
+		<p>text text</p>
+	</article>
+	<!-- button element -->
+
+
+	<article id="select_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>select element</h2>
+		<p>text text</p>
+	</article>
+	<!-- select element -->
+
+
+	<article id="optgroup_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>optgroup element</h2>
+		<p>text text</p>
+	</article>
+	<!-- optgroup element -->
+
+
+	<article id="option_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>option element</h2>
+		<p>text text</p>
+	</article>
+	<!-- option element -->
+
+
+	<article id="datalist_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>datalist element</h2>
+		<p>text text</p>
+	</article>
+	<!-- datalist element -->
+
+
+	<article id="textarea_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>textarea element</h2>
+		<p>text text</p>
+	</article>
+	<!-- textarea element -->
+
+
+	<article id="output_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>output element</h2>
+		<p>text text</p>
+	</article>
+	<!-- output element -->
+
+
+	<article id="progress_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>progress element</h2>
+		<p>text text</p>
+	</article>
+	<!-- progress element -->
+
+
+	<article id="meter_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>meter element</h2>
+		<p>text text</p>
+	</article>
+	<!-- meter element -->
+
+
+	<article id="fieldset_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>fieldset element</h2>
+		<p>text text</p>
+	</article>
+	<!-- fieldset element -->
+
+
+	<article id="legend_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>legend element</h2>
+		<p>text text</p>
+	</article>
+	<!-- legend element -->
+
