--- a/assets/01-html/01-htmlStart/htmlStart.html
+++ b/assets/01-html/01-htmlStart/htmlStart.html
@@ -1,15 +1,21 @@
 
-	<article id="html_start" class="curriculum_box" style="height:1000px; background:#eee;">
+
+	<article id="html_start" class="uk_course" style="height:500px; background:#f9f9f9;">
 		<h2>HTML이란?</h2>
 		<p>text text</p>
 	</article>
+	<!-- HTML이란? -->
 
-	<article id="html_basic" class="curriculum_box" style="height:1000px; background:#fff;">
+
+	<article id="html_basic" class="uk_course" style="height:500px; background:#fff;">
 		<h2>HTML 기본구조</h2>
 		<p>text text</p>
 	</article>
+	<!-- HTML 기본구조 -->
 
-	<article id="html_element" class="curriculum_box" style="height:1000px; background:#eee;">
+
+	<article id="html_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
 		<h2>HTML 요소</h2>
 		<p>text text</p>
 	</article>
+	<!-- HTML 요소 -->
