--- a/assets/01-html/05-textLevel/textLevel.html
+++ b/assets/01-html/05-textLevel/textLevel.html
@@ -1,1 +1,168 @@
-textLevel
+
+	<article id="a_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>a element</h2>
+		<p>text text</p>
+	</article>
+	<!-- a element -->
+
+
+	<article id="em_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>em element</h2>
+		<p>text text</p>
+	</article>
+	<!-- em element -->
+
+
+	<article id="i_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>i element</h2>
+		<p>text text</p>
+	</article>
+	<!-- i element -->
+
+
+	<article id="strong_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>strong element</h2>
+		<p>text text</p>
+	</article>
+	<!-- strong element -->
+
+
+	<article id="b_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>b element</h2>
+		<p>text text</p>
+	</article>
+	<!-- b element -->
+
+
+	<article id="br_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>br element</h2>
+		<p>text text</p>
+	</article>
+	<!-- br element -->
+
+
+	<article id="small_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>small element</h2>
+		<p>text text</p>
+	</article>
+	<!-- small element -->
+
+
+	<article id="s_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>s element</h2>
+		<p>text text</p>
+	</article>
+	<!-- s element -->
+
+
+	<article id="cite_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>cite element</h2>
+		<p>text text</p>
+	</article>
+	<!-- cite element -->
+
+
+	<article id="sub_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>sub element</h2>
+		<p>text text</p>
+	</article>
+	<!-- sub element -->
+
+
+	<article id="sup_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>sup element</h2>
+		<p>text text</p>
+	</article>
+	<!-- sup element -->
+
+
+	<article id="mark_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>mark element</h2>
+		<p>text text</p>
+	</article>
+	<!-- mark element -->
+
+
+	<article id="q_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>q element</h2>
+		<p>text text</p>
+	</article>
+	<!-- q element -->
+
+
+	<article id="code_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>code element</h2>
+		<p>text text</p>
+	</article>
+	<!-- code element -->
+
+
+	<article id="var_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>var element</h2>
+		<p>text text</p>
+	</article>
+	<!-- var element -->
+
+
+	<article id="abbr_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>abbr element</h2>
+		<p>text text</p>
+	</article>
+	<!-- abbr element -->
+
+
+	<article id="data_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>data element</h2>
+		<p>text text</p>
+	</article>
+	<!-- data element -->
+
+
+	<article id="time_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>time element</h2>
+		<p>text text</p>
+	</article>
+	<!-- time element -->
+
+
+	<article id="samp_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>samp element</h2>
+		<p>text text</p>
+	</article>
+	<!-- samp element -->
+
+
+	<article id="kbd_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>kbd element</h2>
+		<p>text text</p>
+	</article>
+	<!-- kbd element -->
+
+
+	<article id="bdi_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>bdi element</h2>
+		<p>text text</p>
+	</article>
+	<!-- bdi element -->
+
+
+	<article id="bdo_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>bdo element</h2>
+		<p>text text</p>
+	</article>
+	<!-- bdo element -->
+
+
+	<article id="wbr_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>wbr element</h2>
+		<p>text text</p>
+	</article>
+	<!-- wbr element -->
+
+
+	<article id="ruby_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>ruby element</h2>
+		<p>text text</p>
+	</article>
+	<!-- ruby element -->
+
