--- a/assets/01-html/07-edits/edits.html
+++ b/assets/01-html/07-edits/edits.html
@@ -1,1 +1,14 @@
-edits
+
+	<article id="del_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+		<h2>del(Deleted Text) element</h2>
+		<p>text text</p>
+	</article>
+	<!-- del(Deleted Text) element -->
+
+
+	<article id="ins_element" class="uk_course" style="height:1000px; background:#fff;">
+		<h2>ins(insert) element</h2>
+		<p>text text</p>
+	</article>
+	<!-- ins(insert) element -->
+
