--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko"><!-- main_page -->
 <head>
 	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css?family=Anton|Cinzel+Decorative:400,700,900|Noto+Sans+KR:100,300,400,500,700,900|Open+Sans:300,400,600,700,800&display=swap&subset=korean,latin-ext,vietnamese" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Anton|Cinzel+Decorative:400,700,900|Jura:300,400,500,600,700|Noto+Sans+KR:100,300,400,500,700,900|Open+Sans:300,400,600,700,800&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,korean,latin-ext,vietnamese" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"><meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -48,8 +48,9 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- css -->
-	<link href="assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 코드미러 스크롤바 -->
-	<link href="assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
+	<link href="/assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 코드미러 스크롤바 -->
+	<link href="/assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
+	<!--<link href="/assets/lib/css/swiper.css" rel="stylesheet" />-->
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 
 	<!-- js -->
@@ -69,7 +70,7 @@
 
 	<header class="uk_header">
 		<div class="inner">
-			<h1 class="hd_logo uk_logo"><a href="/" class="uk_link">uxkm</a></h1>
+			<h1 class="hd_logo uk_logo"><a href="/" class="uk_link">UXKM</a></h1>
 
 			<div class="hd_nav_area">
 				<nav class="nav">
@@ -128,6 +129,8 @@
 <script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
 <script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
 <script type="text/javascript" src="/assets/lib/js/plugin/masonry.pkgd.min.js"></script>
+<!--<script type="text/javascript" src="/assets/lib/js/plugin/jquery.touchFlow.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>-->
 
 <!-- codemirror -->
 <script src="assets/lib/js/codemirror/lib/codemirror.js"></script><!-- 기본 -->
