- 기본 레이아웃 포커스 이동 작업 중 - 검색, assets메뉴 오픈 애니메이션 수정

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta http-equiv="imagetoolbar" content="no">
 	<!--<meta http-equiv="X-UA-Compatible" content="IE=10,chrome=1">-->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<meta http-equiv="Expires" content="-1">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Cache-Control" content="no-cache">
 
@@ -79,6 +81,7 @@
 
 				<section class="aside">
 					<h2 class="sound_only">유틸 메뉴</h2>
+
 					<!-- 검색 -->
 					<article class="hd_search">
 						<h3 class="sound_only">검색</h3>
@@ -99,14 +102,17 @@
 						</div>
 						<button type="button" class="search_close">검색 닫기</button>
 					</article>
+
 					<!-- 사이트맵 -->
 					<article class="hd_assetsLink">
 						<h3 class="sound_only">UI/UX Assets 전체메뉴</h3>
 						<button type="button" class="ly_btn assetsLink_btn"><i>Assets link button</i></button>
 						<div class="hd_layer_box assetsLink_area">
-							<div class="assetsLink_in inner">
-								<h4>UI/UX <i>A</i>ssets Link</h4>
-							</div>
+							<!--<div class="ly_action_wrap">-->
+								<div class="assetsLink_in inner">
+									<h4>UI/UX <i>A</i>ssets Link</h4>
+								</div>
+							<!--</div>-->
 						</div>
 					</article>
 				</section>
