- 기본 레이아웃 완료, 컨텐츠 영역 기본 css 작업 중

--- a/index.html
+++ b/index.html
@@ -140,7 +140,20 @@
 	<div class="zoom_wrap"></div><!-- 사용한다면 uk_container/uk_footer를 감쌀것-->
 
 </div><!-- //wrap -->
-<div class="loading"><i>페이지 로딩 중</i></div>
+
+
+<!--<div class="loading"><i>페이지 로딩 중</i></div>-->
+<div class="loading uxkm_start">
+	<div class="loading_wrap">
+		<div class="loading_rorate bg1"></div>
+		<div class="loading_rorate bg2"></div>
+		<div class="loading_txt">
+			<p class="tit">UXKM</p>
+			<p class="dot">loading...</p>
+		</div>
+	</div>
+</div>
+
 
 <!-- js ------------------------------------ -->
 <!-- plugin -->
